--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Sawarabi Gothic', sans-serif;
+  /* font-family: 'Economica', sans-serif; */
+  /* font-family: 'Lato', sans-serif; */
+  /* font-family: 'Wire One', sans-serif; */
+	/* font-family: 'El Messiri', sans-serif; */
+	font-family: 'Poiret One', cursive;
+	/* font-family: 'Six Caps', sans-serif; */
 }
