--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -16,3 +16,12 @@
     /* padding: 0 2em; */
     /* top: 0; */
 }
+
+.iten{
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    bottom: 20%;
+    font-family: 'Lato', sans-serif;
+}
