--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -34,11 +34,11 @@
     text-decoration-line: none;
     letter-spacing: 0.1rem;
 		transition: all 0.5s ease;
-		font-size: 0.8rem;
+		font-size: 1rem;
     cursor: pointer;
 }
 .ethero:hover{
   color:white;
-  background: rgba(102,177,241,0.8);
+  background: #07edadff;
   transition: all 0.5s ease;
 }
