--- a/src/styles/Contato.module.css
+++ b/src/styles/Contato.module.css
@@ -1,8 +1,104 @@
 .conteiner{
-}
-.item{
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 90vh;
+    flex-wrap: wrap;
+}
+
+.social{
+    position: relative;
+    display: flex;
+    align-items: center;
+    height: 50vh;
+    font-size: 3rem;
+    width: 3rem;
+    flex-wrap: wrap;
+    right: 7rem;
+}
+.l:hover{
+    color: #07edadff;
+}
+
+.habil{
+    position: relative;
+    left: 20rem;
+}
+
+.linha{
+    position: relative;
+    background-color: #000000;
+    width: 0.3rem;
+    height: 27rem;
+    left: 10rem;
+    border-radius: 2rem;
+}
+
+.habil span{
+    font-size: 1.7rem;
+}
+
+.habil span:nth-child(1){
+    position: relative;
+    top: 2rem;
+    right: 2.5rem;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.habil span:nth-child(2){
+    position: relative;
+    top: 5rem;
+    right: 11rem;
+}
+
+.habil span:nth-child(3){
+    position: relative;
+    top: 7.5rem;
+    right: 18.5rem;
+}
+
+.habil span:nth-child(4){
+    position: relative;
+    top: 10rem;
+    right: 21.8rem;
+}
+
+.habil span:nth-child(6){
+    position: relative;
+    left: 11rem;
+    bottom: 15rem;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.habil span:nth-child(7){
+    position: relative;
+    left: 1rem;
+    bottom: 12rem;
+}
+
+.habil span:nth-child(8){
+    position: relative;
+    right: 4.8rem;
+    bottom: 9.5rem;
+}
+
+.habil span:nth-child(9){
+    position: relative;
+    right: 10rem;
+    bottom: 7.5rem;
+}
+
+.habil span:nth-child(10){
+    position: relative;
+    right: 13.5rem;
+    bottom: 2.6rem;
+}
+
+.habil span:nth-child(11){
+    position: relative;
+    right: 17rem;
+    bottom: 5rem;
 }
