--- a/src/styles/Contato.module.css
+++ b/src/styles/Contato.module.css
@@ -5,100 +5,63 @@
     align-items: center;
     height: 90vh;
     flex-wrap: wrap;
+    /* background-image: url('../imagens/areacontato.png'); */
+    background-image: linear-gradient(180deg, black, gray);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .social{
-    position: relative;
+    position: absolute;
     display: flex;
     align-items: center;
-    height: 50vh;
+    text-align: center;
     font-size: 3rem;
-    width: 3rem;
-    flex-wrap: wrap;
-    right: 7rem;
+    width: 25%;
+    justify-content: space-between;
+    color: #ffffff;
+    bottom: 7rem;
+
 }
 .l:hover{
-    color: #07edadff;
-}
-
-.habil{
-    position: relative;
-    left: 20rem;
+    color: #ebb60b;
 }
 
 .linha{
-    position: relative;
-    background-color: #000000;
-    width: 0.3rem;
-    height: 27rem;
-    left: 10rem;
+    position: absolute;
+    background-color: #ebb60b;
+    width: 40%;
+    height: 0.3rem;
     border-radius: 2rem;
+    top: 15rem;
 }
 
-.habil span{
-    font-size: 1.7rem;
-}
-
-.habil span:nth-child(1){
-    position: relative;
-    top: 2rem;
-    right: 2.5rem;
+.titulos{
     font-size: 2rem;
     font-weight: bold;
+    color: #ebb60b;
 }
 
-.habil span:nth-child(2){
-    position: relative;
-    top: 5rem;
-    right: 11rem;
+.pro{
+    position: absolute;
+    left: 50%;
+    top: 3rem;
 }
 
-.habil span:nth-child(3){
-    position: relative;
-    top: 7.5rem;
-    right: 18.5rem;
+.desen{
+    position: absolute;
+    left: 20%;
+    padding-top: 2rem;
+
 }
 
-.habil span:nth-child(4){
-    position: relative;
-    top: 10rem;
-    right: 21.8rem;
+.conteiner ol{
+    color: #ffc70e;
+    text-decoration: none;
+    padding: 1rem;
+    list-style-type: none;
+    font-weight: bold;    
 }
-
-.habil span:nth-child(6){
-    position: relative;
-    left: 11rem;
-    bottom: 15rem;
-    font-size: 2rem;
-    font-weight: bold;
-}
-
-.habil span:nth-child(7){
-    position: relative;
-    left: 1rem;
-    bottom: 12rem;
-}
-
-.habil span:nth-child(8){
-    position: relative;
-    right: 4.8rem;
-    bottom: 9.5rem;
-}
-
-.habil span:nth-child(9){
-    position: relative;
-    right: 10rem;
-    bottom: 7.5rem;
-}
-
-.habil span:nth-child(10){
-    position: relative;
-    right: 13.5rem;
-    bottom: 2.6rem;
-}
-
-.habil span:nth-child(11){
-    position: relative;
-    right: 17rem;
-    bottom: 5rem;
+.conteiner ol li{
+    padding-top: 1rem;
 }
