Erro de componente

--- a/src/components/logo/Logo.module.css
+++ b/src/components/logo/Logo.module.css
@@ -34,7 +34,7 @@
 
 .linha{
     position: absolute;
-    background: #eee;
+    background: #d6e0e2;
     width: 70px;
     height: 25px;
     transform: rotate(-46deg);
