--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   height: 100vh;
   position: relative;
-  background: #eee;
+  background: #d6e0e2;
   text-align: center;
   padding: 0 2em;
   top: 0;
@@ -19,8 +19,8 @@
     bottom: 0;
     width: 100%;
     height: 70px;
+    background-image: linear-gradient(180deg, #d6e0e2, #ffff);
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    background: #fff;
     z-index: 10;
     flex-wrap: wrap;
 }
@@ -36,9 +36,10 @@
 		transition: all 0.5s ease;
 		font-size: 1rem;
     cursor: pointer;
+
 }
 .ethero:hover{
   color:white;
-  background: #07edadff;
+  background: #ffc70e;
   transition: all 0.5s ease;
 }
