--- a/src/styles/Sobre.module.css
+++ b/src/styles/Sobre.module.css
@@ -1,8 +1,55 @@
 .conteiner{
-}
-.item{
+    position: relative;
     display: flex;
-    justify-content: center;
-    align-items: center;
     height: 90vh;
+    background-image: linear-gradient(90deg, #d6e0e2, #ffff, #d6e0e2);
+    justify-content: space-between;
+}
+
+.conteiner div:nth-child(2){
+    text-align: justify;
+    padding: 3rem;
+    margin-top: 3rem;    
+}
+
+.conteiner p{
+    margin-top: 1rem;
+    font-size: 1.2rem;
+}
+.conteiner div img{
+    position: relative;
+    width: 27rem;
+    border-radius: 0.5rem;
+    top: 5rem;
+    left: 2rem;
+    z-index: 1;
+}
+
+.conteiner div:nth-child(3){
+    position: absolute;
+    right: 3rem;
+    bottom: 5rem;
+}
+
+.imGG{
+    position: absolute;
+    border-radius:1rem;
+    top: 15rem;
+    left: 35%;
+}
+
+.l2{
+    position: absolute;
+    background-color: #ffc70e;
+    bottom: 15rem;
+    width: 100%;
+    height: 1rem;
+}
+.v2{
+    position: absolute;
+    background-color: #ffc70e;
+    width: 1rem;
+    height: 88%;
+    left: 20%;
+    top: 5rem;
 }
