Revert "Criacao logo principal"
This reverts commit 1b2dfb6521dc96804e35fcb59e7d78526b61deda.

--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,5 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* font-family: 'Economica', sans-serif; */
-  /* font-family: 'Lato', sans-serif; */
-  /* font-family: 'Wire One', sans-serif; */
-	/* font-family: 'El Messiri', sans-serif; */
-	font-family: 'Poiret One', cursive;
-	/* font-family: 'Six Caps', sans-serif; */
+  font-family: 'Sawarabi Gothic', sans-serif;
 }
