--- a/src/styles/Projetos.module.css
+++ b/src/styles/Projetos.module.css
@@ -21,6 +21,11 @@
     cursor: pointer;
 
 }
+.l2 div{
+    width: 100%;
+    height: 10px;
+    background-color: #ffc70e;
+}
 
 .l3{
     width: 40%;
@@ -29,16 +34,17 @@
 
 }
 
+.l3 div{
+    width: 100%;
+    height: 10px;
+    background-color: #ffc70e;
+}
+
 .l4{
     background-image: linear-gradient(180deg,  #d6e0e2, #ffc70e);
     width: 40%;
     height: 40%;
     cursor: pointer;
-}
-
-.m1{
-    position: absolute;
-    width: 50%;
 }
 
 .l1:hover{
