Criacao componente Habil e estilizacao de componentes

--- a/src/styles/Contato.module.css
+++ b/src/styles/Contato.module.css
@@ -59,6 +59,22 @@
     list-style-type: none;
     font-weight: bold;    
 }
+
 .conteiner ol li{
     padding-top: 1rem;
+}
+
+.l2{
+    position: absolute;
+    background-color: #ffc70e;
+    bottom: 13rem;
+    width: 100%;
+    height: 1rem;
+}
+.v2{
+    position: absolute;
+    background-color: #ffc70e;
+    width: 1rem;
+    height: 100%;
+    right: 20%;
 }
