correcao de @mediaquerys e transbordamento

--- a/src/components/logo/Habilidades.module.css
+++ b/src/components/logo/Habilidades.module.css
@@ -7,3 +7,13 @@
     justify-content: space-between;
     width: 40%;
 }
+
+@media (max-width: 480px) {
+
+    .conteiner{
+        top: 62%;
+        width: 70%;
+        flex-wrap: wrap;
+    }
+    
+}
