--- a/src/styles/Contato.module.css
+++ b/src/styles/Contato.module.css
@@ -1,4 +1,5 @@
 .conteiner{
+    overflow: hidden;
     position: relative;
     display: flex;
     justify-content: center;
@@ -77,4 +78,14 @@
     width: 1rem;
     height: 100%;
     right: 20%;
+}
+
+@media (max-width: 480px) {
+    
+    .pro{left: 30%;}
+    
+    .social{
+        width: 45%;
+    }
+    
 }
