--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -3,8 +3,7 @@
     justify-content: center;
     height: 90vh;
     top: 0;
-    /* background-color: #d6e0e2; */
-
+    overflow: hidden;
 }
 
 .item{
@@ -72,4 +71,28 @@
     width: 1rem;
     height: 14%;
     left: 60%;
+}
+
+@media (max-width: 480px) {
+
+    .conteiner div img{
+        width: 22rem;
+        position: absolute;
+        right: 0;
+        left: -15.5rem;
+        bottom: -3rem;
+    }
+
+    .conteiner h1{
+        width: 0;
+        top: 43%;}
+    
+    .l2{top: 50%;}
+    
+    .v2{display: none;}
+    
+    .l3{top: 52%;}
+    
+    .v3{height: 38%;}
+    
 }
