--- a/src/styles/Sobre.module.css
+++ b/src/styles/Sobre.module.css
@@ -4,6 +4,7 @@
     height: 90vh;
     background-image: linear-gradient(90deg, #d6e0e2, #ffff, #d6e0e2);
     justify-content: space-between;
+    overflow: hidden;
 }
 
 .conteiner div:nth-child(2){
@@ -64,6 +65,7 @@
         margin-top: 0;
         top: 1rem;
         padding: 1rem;
+        width: 100%;
     }
 
     .conteiner div:nth-child(3){
@@ -71,5 +73,6 @@
         left: 1rem;
         padding: 0.5rem;
         bottom: 1rem;
+        width: 100%;
     }
 }
