--- a/src/components/logo/Habilidades.module.css
+++ b/src/components/logo/Habilidades.module.css
@@ -8,12 +8,33 @@
     width: 40%;
 }
 
+.conteiner :nth-child(1n-1){
+    cursor: pointer;
+}
+
+.h{
+    position: absolute;
+    top: 6rem;
+    left: 2rem;
+    font-size: 3rem;
+}
+
+.h span{
+    font-size: 5rem;
+    font-family: 'Secular One', sans-serif;
+}
+
 @media (max-width: 480px) {
 
     .conteiner{
         top: 62%;
         width: 70%;
         flex-wrap: wrap;
+    }
+
+    .conteiner :nth-child(1n-1){
+        margin-bottom: 0.5rem;
+        padding: 0.5rem;
     }
     
 }
