--- a/src/components/logo/Habilidades.module.css
+++ b/src/components/logo/Habilidades.module.css
@@ -2,13 +2,23 @@
     display: flex;
     position: absolute;
     top: 50%;
-    right: 3rem;
+    right: 1rem;
     font-size: 4rem;
     justify-content: space-between;
-    width: 40%;
+    width: 50%;
 }
 
-.conteiner :nth-child(1n-1){
+.contnei{
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+}
+.pon{
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
     cursor: pointer;
 }
 
