--- a/src/components/layout_projeto/LayoutProjeto.module.css
+++ b/src/components/layout_projeto/LayoutProjeto.module.css
@@ -20,7 +20,13 @@
     height: 60%;
     top: 5%;
     margin-right: 1rem;
+}
 
+.l2 div{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
 
 .l3{
@@ -34,6 +40,13 @@
 
 }
 
+.l3 div{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
 .l4{
     background-image: linear-gradient(180deg, #ffc70e, #d6e0e2);
     width: 10%;
@@ -42,6 +55,13 @@
     position: relative;
     margin-right: 1rem;
 
+}
+
+.l4 div{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
 
 .active{
@@ -77,3 +97,21 @@
     top: 15rem;
     left: -6rem;
     }
+
+@media (max-width: 480px) {
+
+    .l2 span{
+        font-size: 3rem;
+        left: -8.7rem;
+        z-index: 0;
+    }
+    .l3 span{
+        font-size: 3rem;
+        left: -8.7rem;
+    }
+    .l4 span{
+        font-size: 3rem;
+        left: -8.7rem;
+    }
+
+}
