--- a/src/components/layout_projeto/LayoutProjeto.module.css
+++ b/src/components/layout_projeto/LayoutProjeto.module.css
@@ -1,14 +1,21 @@
 
 .l1{
+    background-image: linear-gradient(180deg, #ffc70e, #d6e0e2);
     position: relative;
     width: 10%;
     height: 60%;
     cursor: pointer;
     margin-right: 1rem;
+    overflow: hidden;
+}
 
+.l1 span{
+    position: absolute;
+    height: 100%;
+    width: 50%;
     background-image: url('/src/imagens/portifolio.png');
+    background-size: 450px;
     background-repeat: no-repeat;
-    background-size: cover;
     background-position: center;
 }
 
@@ -22,12 +29,6 @@
     margin-right: 1rem;
 }
 
-.l2 div{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-}
 
 .l3{
     background-image: linear-gradient(180deg, #ffc70e, #d6e0e2);
@@ -40,12 +41,6 @@
 
 }
 
-.l3 div{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-}
 
 .l4{
     background-image: linear-gradient(180deg, #ffc70e, #d6e0e2);
@@ -57,7 +52,7 @@
 
 }
 
-.l4 div{
+.DivStyle{
     position: absolute;
     width: 100%;
     height: 100%;
