--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,98 +1,22 @@
 .conteiner{
+    display: flex;    
     position: relative;
     justify-content: center;
     height: 90vh;
     top: 0;
-    overflow: hidden;
-}
-
-.item{
-    display: flex;
-    /* flex-direction: column; */
-    justify-content: center;
     align-items: center;
-    height: 90vh;
-    /* position: relative; */
-    /* text-align: center; */
-    /* padding: 0 2em; */
-    /* top: 0; */
-}
-
-.conteiner h1{
-    position: relative;
-    left: 55%;
-    top: 9rem;
+    overflow: hidden;
+    flex-wrap: wrap;
 }
 
 .imGG{
-    position: absolute;
-    border-radius:1rem;
-    top: 15rem;
-    right: 39%;
-}
-
-.conteiner div img{
     position: relative;
-    width: 30rem;
-    border-radius: 0.5rem;
-    right: 18rem;
-    z-index: 1;
+    right: 5%;
 }
+.imGG img {border-radius: 10px;}
 
-.l2{
-    position: absolute;
-    background-color: #ffc70e;
-    top: 12rem;
-    width: 100%;
-    height: 1rem;
-}
+@media (max-width: 768px){
 
-.v2{
-    position: absolute;
-    background-color: #ffc70e;
-    width: 1rem;
-    height: 100%;
-    left: 40%;
-}
-
-.l3{
-    display: flex;
-    position: relative;
-    background-color: #ffc70e;
-    top: 13rem;
-    float: right;
-    width: 40%;
-    height: 0.5rem;
-}
-
-.v3{
-    position: absolute;
-    background-color: #ffc70e;
-    width: 1rem;
-    height: 14%;
-    left: 60%;
-}
-
-@media (max-width: 480px) {
-
-    .conteiner div img{
-        width: 22rem;
-        position: absolute;
-        right: 0;
-        left: -15.5rem;
-        bottom: -3rem;
-    }
-
-    .conteiner h1{
-        width: 0;
-        top: 43%;}
-    
-    .l2{top: 50%;}
-    
-    .v2{display: none;}
-    
-    .l3{top: 52%;}
-    
-    .v3{height: 38%;}
-    
+    .imGG{right: 0;}
+    .imGG img{width: 400px;}
 }
