--- a/src/styles/Sobre.module.css
+++ b/src/styles/Sobre.module.css
@@ -1,78 +1,101 @@
 .conteiner{
     position: relative;
     display: flex;
-    height: 90vh;
+    height: 110vh;
     background-image: linear-gradient(90deg, #d6e0e2, #ffff, #d6e0e2);
-    justify-content: space-between;
     overflow: hidden;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 1.5rem;
+
 }
+
+.imG{display: flex;
+    position: relative;
+    right: 25%;
+    top: 10%;    
+}
+
+.imG img{width: 400px;}
 
 .conteiner div:nth-child(2){
-    text-align: justify;
-    padding: 3rem;
-    margin-top: 3rem;    
-}
-
-.conteiner p{
-    margin-top: 1rem;
-    font-size: 1.2rem;
-}
-.conteiner div img{
     position: relative;
-    width: 27rem;
-    border-radius: 0.5rem;
-    top: 10rem;
-    left: 2rem;
-    z-index: 1;
+    width: 50%;
+    text-align: justify;
+    left: 20%;
+    bottom: 20%;
 }
 
 .conteiner div:nth-child(3){
-    position: absolute;
-    right: 10rem;
-    bottom: 5rem;
+    position: relative;
+    left: 14.5%;
+    text-align: justify;
+    bottom: 15%;
 }
 
-.l2{
-    position: absolute;
-    background-color: #ffc70e;
-    bottom: 15rem;
-    width: 100%;
-    height: 1rem;
-}
-.v2{
-    position: absolute;
-    background-color: #ffc70e;
-    width: 1rem;
-    height: 100%;
-    left: 20%;
+.conteiner div:nth-child(4){
+    position: relative;
+    width: 80%;
+    text-align: justify;
+    left: 5%;
+    bottom: 10%;
 }
 
+@media (max-width: 768px){
 
-@media (max-width: 480px) {
-    
-    .conteiner div img{
-        width: 23rem;
-        top: 3rem;
-    }
-    .l2, .v2{
-        display: none;
-    }
-    .conteiner{flex-wrap: wrap;
-    height: 110vh;}
-    
-    .conteiner div:nth-child(2){
-        position: relative;
-        margin-top: 0;
-        top: 1rem;
-        padding: 1rem;
+    .conteiner{
+        height: 170vh;
+        font-size: 1.3rem;
+        flex-wrap: wrap;}
+
+    .imG{
         width: 100%;
+        right: 0;
+        left: 5%;
+        top: -7%;
+    }
+
+    .conteiner div:nth-child(2){
+        width: 100%;
+        left: 0;
+        bottom: 5%;
+        padding: 1rem;
     }
 
     .conteiner div:nth-child(3){
-        position: relative;
-        left: 1rem;
-        padding: 0.5rem;
-        bottom: 1rem;
+        left: 5px;
+        padding: 10px;
+        bottom: 3%;
+        font-size: 19px;
+    }
+
+
+    .conteiner div:nth-child(4){
         width: 100%;
+        left: 0;
+        padding: 15px;
+        bottom: 0;
+    }
+}
+
+
+@media (max-width: 390px){
+
+    .imG{
+        top: -2%;
+    }
+
+    .conteiner div:nth-child(2){
+        bottom: 0;
+    }
+
+    .conteiner div:nth-child(3){
+        bottom: 0;
+    }
+
+
+    .conteiner div:nth-child(4){
+        bottom: -1%;
     }
 }
