--- a/src/styles/Contato.module.css
+++ b/src/styles/Contato.module.css
@@ -67,6 +67,10 @@
     padding-top: 1rem;
 }
 
+@media (max-width: 1280px){
+    .linha{top: 15.8rem;}
+}
+
 @media (max-width: 480px) {
     
     .pro{
