--- a/src/styles/Sobre.module.css
+++ b/src/styles/Sobre.module.css
@@ -14,7 +14,8 @@
 .imG{display: flex;
     position: relative;
     right: 25%;
-    top: 10%;    
+    top: 10%;
+    border-radius: 7px;    
 }
 
 .imG img{width: 400px;}
@@ -49,12 +50,12 @@
     }
 
     .imG{
-        right: 28%;
-        top: 20%;
+        right: 23%;
+        top: 10%;
     }
 }
 
-@media (max-width: 768px){
+@media (max-width: 1105px){
 
     .conteiner{
         height: 170vh;
@@ -62,12 +63,12 @@
         flex-wrap: wrap;}
 
     .imG{
-        width: 100%;
+        width: 50%;
         right: 0;
         left: 1.5%;
         top: -4.5%;
     }
-
+    
     .conteiner div:nth-child(2){
         width: 100%;
         left: 0;
@@ -94,20 +95,15 @@
 
 @media (max-width: 390px){
 
-    .imG{
-        top: -2%;
-    }
+    .imG{top: -2%;}
 
-    .conteiner div:nth-child(2){
-        bottom: 0;
+    .imG img {
+        position: relative;
+        right: 17%;
     }
+    .conteiner div:nth-child(2){bottom: 0;}
 
-    .conteiner div:nth-child(3){
-        bottom: 0;
-    }
+    .conteiner div:nth-child(3){bottom: 0;}
 
-
-    .conteiner div:nth-child(4){
-        bottom: -1%;
-    }
+    .conteiner div:nth-child(4){bottom: -1%;}
 }
