--- a/src/components/layout_projeto/LayoutProjeto.module.css
+++ b/src/components/layout_projeto/LayoutProjeto.module.css
@@ -86,13 +86,41 @@
     left: -6rem;
     }
 
-@media (max-width: 480px) {
+@media (max-width: 1158px) {
 
+    .l1 span{ background-size: 400px;}
+}
+
+@media (max-width: 1062px) {
+
+    .l1 span{ background-size: 350px;}
+}
+
+@media (max-width: 1020px) {
     .l1 span{
         width: 100%;
         height: 60%;
-        background-size: 270px;
+        background-size: 310px;
     }
+
+}
+
+@media (max-width: 820px) {
+    
+    .l1 span{
+        top: -10%;
+        background-size: 350px;
+    }
+}
+
+@media (max-width: 768px) {
+    
+    .l1 span {top: -4%;
+    background-size: 400px;    
+    }
+}
+
+@media (max-width: 480px) {
 
     .l2 span{
         font-size: 3rem;
@@ -108,6 +136,21 @@
         left: -8rem;
     }
 
+}
+
+@media (max-width: 412px) {
+    
+    .l1 span {top: -4%;
+        background-size: 325px;    
+    }
+}
+
+
+@media (max-width: 412px) {
+    
+    .l1 span {top: -3%;
+        background-size: 275px;    
+    }
 }
 
 .active{
