--- a/src/components/infoprojetos/InfoProjeto.module.css
+++ b/src/components/infoprojetos/InfoProjeto.module.css
@@ -1,13 +1,14 @@
 .Container{
     position:absolute;
     right: 10%;
-    top: 14rem;
-    width: 500px;
+    bottom: 30%;
+    width: 45%;
 }
 
 .Container h1{font-size: 3rem;}
 
 .Container div{
+    position: relative;
     display: flex;
     padding: 0.5rem;
     justify-content: space-between;
@@ -36,7 +37,7 @@
 @media (max-width: 1020px) {
     
     .Container{
-        top: 29rem;
+        bottom: 10%;
         right: 5%;
         width: 90%;
     }
@@ -44,41 +45,20 @@
 
 @media (max-width: 820px) {
     
-    .Container{top: 35rem;}
+    .Container{top: 31rem;}
 }
 
-@media (max-width: 768px) {
+@media (max-width: 500px) {
     
-    .Container{top: 37rem;}
-
-}
-
-@media (max-width: 566px) {
-
-    .Container{
-        top: 26rem;
-        left: 5px;
-        width: 360px;
-    }
-
     .Container div:nth-child(4){
-        font-size: 12px;
+        width: 100%;
+        font-size: 17px;
     }
-
-    .Container h1{
-        font-size: 2rem;}
-
     .Container div svg{
-        font-size: 1.5rem;}
-}
-
-@media (max-width: 566px) {
-    
-    .Container div:nth-child(4){
-        width: 320px;
-        font-size: 16px;
-        left: 1%;
+        font-size: 2.5rem;
     }
+    
+    .Container h1{font-size: 2.5rem;}
 
     .Container div:nth-child(5){
         bottom: -13%;
@@ -87,5 +67,179 @@
 }
 
 @media (max-width: 414px) {
+    
+    .Container h1{
+        font-size: 2rem;}
+}
+
+@media (max-width: 392px) {
+    
+    .Container div svg{
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 360px) {
+    
+    .Container h1{
+        position: relative;
+        bottom: 40%;
+    }
+
+    .Container{
+        bottom: 60%;
+    }
+
+    .Container div:nth-child(5){
+        font-size: 13px;
+    }
+}
+
+@media (max-width: 320px) {
+
+    .Container{top: 42%;}
+}
+
+@media (max-width: 390px) and (max-height: 844px){
+
+    .Container div svg{
+        font-size: 2rem;
+    }
+
+    .Container{
+        top: 52%;
+    }
+
+    .Container div:nth-child(4){
+        font-size: 21px;
+    }
+
+    .Container div:nth-child(5){
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 414px) and (max-height: 896px){
+    
     .Container{top: 55%;}
+}
+
+@media (max-width: 412px) and (max-height: 915px){
+    
+    .Container{top: 50%;}
+
+    .Container div:nth-child(4){
+        font-size: 21px;
+    }
+
+    .Container div:nth-child(5){
+        bottom: -17%;
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 390px) and (max-height: 844px){
+    
+    .Container{top: 49.5%;}
+
+}
+
+@media (max-width: 375px) and (max-height: 667px){
+
+    .Container div svg{
+        font-size: 1.7rem;
+    }
+
+    .Container{
+        top: 50%;
+    }
+
+    .Container div:nth-child(4){
+        font-size: 17px;
+    }
+
+    .Container div:nth-child(5){
+        font-size: 15px;
+    }
+
+}
+
+@media (max-width: 360px) and (max-height: 740px){
+
+    .Container div svg{
+        font-size: 1.7rem;
+    }
+
+    .Container{
+        top: 52%;
+    }
+
+    .Container div:nth-child(4){
+        font-size: 18px;
+    }
+
+    .Container div:nth-child(5){
+        font-size: 15px;
+    }
+
+}
+
+@media (max-width: 360px) and (max-height: 640px){
+
+    .Container{
+        top: 49%;
+    }
+
+    .Container div:nth-child(4){
+        font-size: 16.9px;
+    }
+
+    .Container div:nth-child(5){
+        font-size: 15px;
+    }
+
+}
+
+@media (max-width: 320px) and (max-height: 658px){
+
+    .Container{
+        top: 38%;
+    }
+
+    .Container div:nth-child(4){
+        font-size: 17px;
+    }
+
+    .Container div:nth-child(5){
+        bottom: -13%;
+        font-size: 13.1px;
+    }
+}
+
+@media (max-width: 320px) and (max-height: 480px){
+    
+    .Container div svg{
+        font-size: 1rem;
+    }
+
+    .Container{
+        top: 45%;
+    }
+
+    .Container h1{
+        font-size: 27px;
+        position: relative;
+    }
+
+    .Container div:nth-child(4){
+        font-size: 14px;
+    }
+
+    .Container div:nth-child(5){
+        font-size: 13px;
+    }
+
+    .Container div:nth-child(2){
+        font-size: 13px;
+    }
 }
