--- a/src/components/layout_projeto/LayoutProjeto.module.css
+++ b/src/components/layout_projeto/LayoutProjeto.module.css
@@ -100,7 +100,7 @@
     .l1 span{
         width: 100%;
         height: 60%;
-        background-size: 310px;
+        background-size: 43%;
     }
 
 }
@@ -108,15 +108,8 @@
 @media (max-width: 820px) {
     
     .l1 span{
-        top: -10%;
+        top: -4%;
         background-size: 350px;
-    }
-}
-
-@media (max-width: 768px) {
-    
-    .l1 span {top: -4%;
-    background-size: 400px;    
     }
 }
 
@@ -139,17 +132,55 @@
 }
 
 @media (max-width: 412px) {
-    
+
     .l1 span {top: -4%;
-        background-size: 325px;    
+        background-size: 90%;    
+    }
+}
+
+@media (max-width: 320px) {
+
+    .l1 span {top: -8%;}
+}
+
+@media (max-width: 390px) and (max-height: 844px){
+
+    .l1 span{
+        background-size: 90%;
+    }
+}
+
+@media (max-width: 375px) and (max-height: 667px){
+
+    .l1 span{
+        top: -5.5%;
+        background-size: 75%;
+    }
+}
+
+@media (max-width: 360px) and (max-height: 640px){
+
+    .l1 span{
+        top: -6%;
+        background-size: 75%;
+    }
+}
+
+@media (max-width: 320px) and (max-height: 658px){
+
+    .l1 span{
+        top: -12%;
+        left: 10%;
+        background-size: 65%;
     }
 }
 
 
-@media (max-width: 412px) {
-    
-    .l1 span {top: -3%;
-        background-size: 275px;    
+@media (max-width: 320px) and (max-height: 480px){
+
+    .l1 span{
+        top: -7%;
+        background-size: 60%;
     }
 }
 
