--- a/src/components/layout_projeto/LayoutProjeto.module.css
+++ b/src/components/layout_projeto/LayoutProjeto.module.css
@@ -1,7 +1,17 @@
+.conteiner{
+    position: relative;
+    justify-content: center;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    top: 5%;
+}
 
 .l1{
     background-image: linear-gradient(180deg, #ffc70e, #d6e0e2);
     position: relative;
+    display: flex;
+    flex-direction: row;
     width: 15%;
     height: 60%;
     cursor: pointer;
@@ -9,14 +19,32 @@
     overflow: hidden;
 }
 
-.l1 span{
-    position: absolute;
+.nomeProjeto{
+    position: relative;
+    transform: rotate(90deg);
+    font-size: 5em;
+    height: 10%;
+    top: 30%;
+    right: 11%;
+    z-index: 2;
+}
+
+
+.imagemProjeto{
+    position: relative;
     height: 100%;
-    width: 50%;
+    width: 100%;
+    right: 15%;
     background-image: url('/src/imagens/portifolio.png');
     background-size: 450px;
     background-repeat: no-repeat;
     background-position: center;
+    border-radius: 8px;
+}
+
+.proJeto{
+    position: relative;
+    width: 100%;
 }
 
 .l2{
@@ -38,7 +66,6 @@
     position: relative;
     top: 8%;
     margin-right: 1rem;
-
 }
 
 
@@ -50,13 +77,6 @@
     position: relative;
     margin-right: 1rem;
 
-}
-
-.DivStyle{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
 }
 
 .l2 span{
@@ -85,6 +105,18 @@
     top: 15rem;
     left: -6rem;
     }
+
+.active{
+position: absolute;
+display: flex;
+height: 90%;
+z-index: 2;
+
+animation-name: Slider;
+animation-duration: 2s;
+animation-fill-mode: forwards;
+
+}
 
 @media (max-width: 1158px) {
 
@@ -175,24 +207,12 @@
     }
 }
 
-
 @media (max-width: 320px) and (max-height: 480px){
 
     .l1 span{
         top: -7%;
         background-size: 60%;
     }
-}
-
-.active{
-    position: absolute;
-    height: 90%;
-    z-index: 2;
-
-    animation-name: Slider;
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
-
 }
 
 @keyframes Slider{
