--- a/src/components/infoprojetos/InfoProjeto.module.css
+++ b/src/components/infoprojetos/InfoProjeto.module.css
@@ -1,11 +1,31 @@
 .Container{
-    position:absolute;
-    bottom: 30%;
+    position:relative;
+    display: flex;
+    flex-direction: row;
     width: 100%;
+    height: 100%;
+
     right: 5%;
 }
 
-.Container h1{font-size: 3rem;}
+
+.imagemProjeto{
+    position: relative;
+    width: 100%;
+    background-image: url('/src/imagens/portifolio.png');
+    -moz-border-radius: 50px;
+    border-radius: 10%;
+    border: none;
+    background-size: 400px;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-right: 3%;
+}
+
+
+.Container h1{
+    width: 100%;
+    font-size: 3rem;}
 
 .Container div{
     position: relative;
