--- a/src/components/layout_projeto/LayoutProjeto.module.css
+++ b/src/components/layout_projeto/LayoutProjeto.module.css
@@ -3,14 +3,16 @@
     justify-content: center;
     display: flex;
     width: 100%;
-    height: 100%;
-    top: 5%;
+    height: 70%;
+    bottom: 13%;
 }
 
 .l1{
     background-image: linear-gradient(180deg, #ffc70e, #d6e0e2);
     position: relative;
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: row;
     width: 15%;
     height: 60%;
@@ -19,32 +21,24 @@
     overflow: hidden;
 }
 
+.conteinerSecundario{
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
 .nomeProjeto{
     position: relative;
+    width: none;
     transform: rotate(90deg);
-    font-size: 5em;
+    font-size: 4em;
     height: 10%;
-    top: 30%;
-    right: 11%;
     z-index: 2;
-}
-
-
-.imagemProjeto{
-    position: relative;
-    height: 100%;
-    width: 100%;
-    right: 15%;
-    background-image: url('/src/imagens/portifolio.png');
-    background-size: 450px;
-    background-repeat: no-repeat;
-    background-position: center;
-    border-radius: 8px;
-}
-
-.proJeto{
-    position: relative;
-    width: 100%;
 }
 
 .l2{
@@ -108,7 +102,6 @@
 
 .active{
 position: absolute;
-display: flex;
 height: 90%;
 z-index: 2;
 
@@ -118,23 +111,49 @@ animation-fill-mode: forwards;
 
 }
 
-@media (max-width: 1158px) {
+@media (max-width: 1433px) {
 
-    .l1 span{ background-size: 400px;}
+    .imagemProjeto{ left: 25%;}
 }
 
-@media (max-width: 1062px) {
+@media (max-width: 1240px) {
 
-    .l1 span{ background-size: 350px;}
-}
+    .nomeProjeto{ 
+        right: 10%;
+        bottom: 25%;}
 
-@media (max-width: 1020px) {
-    .l1 span{
-        width: 100%;
-        height: 60%;
-        background-size: 43%;
+    .proJeto{
+        top: 5%;
     }
 
+    .imagemProjeto{ left: 17%;}
+
+}
+
+
+@media (max-width: 1156px) {
+
+    .proJeto{ 
+        right: 25%;}
+}
+
+@media (max-width: 1100px) {
+
+    .proJeto{ 
+        height: 80%;
+        right: 15%;}
+}
+
+@media (max-width: 1000px) {
+
+    .imagemProjeto{
+        width: 370px;
+        left: 1%;
+    }
+
+    .proJeto{
+        width: 600px;
+    }
 }
 
 @media (max-width: 820px) {
